# Optimizacion

./: pyproject.toml
src/: main.py  params.py
