[tool.poetry]
name = "optimizacion"
version = "0.1.0"
description = "Pene"
authors = ["tvallotton"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.1"
gurobipy = "^9.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
